Fix Important Notice text alignment to be justified with !important flag

--- a/user/package/package_summary.css
+++ b/user/package/package_summary.css
@@ -1744,7 +1744,11 @@ body {
 }
 
 .alert-compact p {
-    text-align: justify;
+    text-align: justify !important;
+}
+
+.alert-compact .font-size-smallest {
+    text-align: justify !important;
 }
 
 /* Font size styles */
